# motra-images

./: README.md
.github/workflows/: build-mongoose.yaml  build-openssh.yaml  full-opc-server-model-gen-checks.yaml  publish-dotnet-UAStandard-to-GHCR.yaml  publish-lds-UA-standard-to-GHCR.yaml  publish-lds-open62541-to-GHCR.yaml  publish-nodejs-node-opcua-to-GHCR.yaml  publish-open62541-to-GHCR.yaml  publish-openssh-to-GHCR.yaml  publish-python-asyncua-to-GHCR.yaml  publish-test-UA-model-compiler.yaml
database/mariadb/: compose.yaml  docker-build.sh
database/mongodb/: compose.yaml  docker-build.sh
database/postgres/: README.md  compose.yaml  docker-build.sh  pgadmin.yaml
database/redis/: README.md  compose.yaml  docker-build.sh  pgweb.yaml  redis-commander.yaml
opcua/dashboard/python-opcua-asyncio/latest/: Dockerfile  docker-build.sh  startup.sh
opcua/historian/python-opcua-asyncio/latest/: Dockerfile  startup.sh  (+1 more)
opcua/lds/lds-UA-server/: Dockerfile  README.md  action.yaml  docker-build.sh  docker-run.sh  entrypoint.sh
opcua/lds/lds-open62541-server/: Dockerfile  README.md  action.yaml  docker-build.sh  docker-run.sh  entrypoint.sh
opcua/server/python-opcua-asyncio/latest/src/: pyproject.toml  server.py
opcua/tools/model-compiler/: Dockerfile  README.md  action.yaml  docker-build.sh  docker-run.sh  entrypoint.sh  generate_demo_models.sh
remote/ssh/openssh/: CVE-2019-6111.Dockerfile  CustomBuild.Dockerfile  Dockerfile  README.md  compose-custom.yaml
remote/ssh/paramiko/: README.md  server.py
web/mongoose/: Dockerfile  compose.yml  docker-build.sh
(+72 files in other folders)
